# kant-ros

./: .clang-format  .gitignore  README.md  install_dependency.sh  requirements.txt
KantFramework/: CMakeLists.txt  README.md  build.sh  run_example.sh
KantFramework/AdminRegistryServer/: AdminReapThread.cpp  AdminReapThread.h  AdminRegistryImp.cpp  AdminRegistryImp.h  AdminRegistryServer.cpp  AdminRegistryServer.h  CMakeLists.txt  DbProxy.cpp  DbProxy.h  ExecuteTask.cpp  ExecuteTask.h  util.h
KantFramework/KantNode/: CMakeLists.txt  main.cpp  test_coroutine.cpp
KantFramework/kantcpp/: CMakeLists.txt  clear-install.cmake
KantFramework/kantcpp/cmake/: BuildKantCpp.cmake  BuildTarsCpp.cmake  Common.cmake  Thirdparty.cmake
KantFramework/kantcpp/examples/: CMakeLists.txt
KantFramework/kantcpp/examples/AuthDemo/Client/: CMakeLists.txt  config.conf  main.cpp
KantFramework/kantcpp/examples/AuthDemo/Server/: CMakeLists.txt  Hello.h  Hello.kant  HelloImp.cpp  HelloImp.h  HelloServer.cpp  HelloServer.h  config.conf
KantFramework/kantcpp/examples/CoroutineDemo/AServer/: AServant.h  AServantImp.cpp  AServantImp.h  AServer.cpp  AServer.h  CMakeLists.txt  config.conf
KantFramework/kantcpp/examples/CoroutineDemo/BServer/: BServant.h  BServantImp.cpp  BServantImp.h  BServer.cpp  BServer.h  CMakeLists.txt  config.conf
KantFramework/kantcpp/examples/CoroutineDemo/client/: CMakeLists.txt  main.cpp
KantFramework/kantcpp/examples/CoroutineDemo/testCoro/: CMakeLists.txt  main.cpp
KantFramework/kantcpp/examples/CoroutineDemo/testParallelCoro/: CMakeLists.txt  main.cpp
KantFramework/kantcpp/servant/: CMakeLists.txt
KantFramework/kantcpp/servant/libservant/: AdapterProxy.cpp  AdminServant.cpp  AppCache.cpp  AppProtocol.cpp  Application.cpp  AsyncProcThread.cpp  AuthLogic.cpp  BaseNotify.cpp  CMakeLists.txt  Communicator.cpp  CommunicatorEpoll.cpp  Current.cpp  EndpointInfo.cpp  EndpointManager.cpp  Global.cpp  KeepAliveNodeF.cpp  Message.cpp  NotifyObserver.cpp  ObjectProxy.cpp  PropertyReport.cpp  RemoteConfig.cpp  RemoteLogger.cpp  RemoteNotify.cpp  Servant.cpp  ServantHandle.cpp  ServantHelper.cpp  ServantProxy.cpp  ServantProxyFactory.cpp  StatReport.cpp
KantFramework/kantcpp/servant/promise/: bind.h  bind_internal.h  callback.h  exception.h  function.h  promise.h  template_helper.h  type_list.h  when_all.h
KantFramework/kantcpp/servant/protocol/framework/: AdminReg.h  AdminReg.kant  CMakeLists.txt  MonitorQuery.h  MonitorQuery.kant  Node.h  Node.kant  NodeDescriptor.h  NodeDescriptor.kant  Patch.h  Patch.kant  Registry.h  Registry.kant  RegistryDescriptor.h  RegistryDescriptor.kant
KantFramework/kantcpp/servant/protocol/servant/: AdminF.kant  AuthF.h  AuthF.kant  BaseF.h  BaseF.kant  CMakeLists.txt  ConfigF.kant  EndpointF.kant  LogF.h  LogF.kant  NodeF.h  NodeF.kant  NotifyF.h  NotifyF.kant  PropertyF.kant  QueryF.kant  StatF.kant
KantFramework/kantcpp/servant/servant/: AdapterProxy.h  AdminF.h  AdminServant.h  AppCache.h  AppProtocol.h  Application.h  AsyncProcThread.h  AuthF.h  AuthLogic.h  BaseNotify.h  Communicator.h  CommunicatorEpoll.h  CommunicatorFactory.h  ConfigF.h  Cookie.h  Current.h  EndpointF.h  EndpointInfo.h  EndpointManager.h  Global.h  KeepAliveNodeF.h  LogF.h  Message.h  NodeF.h  NotifyF.h  NotifyObserver.h  ObjectProxy.h  ObjectProxyFactory.h  PropertyF.h  PropertyReport.h  QueryF.h  RemoteConfig.h  RemoteLogger.h  RemoteNotify.h  Servant.h  ServantHandle.h  ServantHelper.h  ServantProxy.h  ServantProxyFactory.h  StatF.h  (+1 more)
KantFramework/kantcpp/servant/tup/: CMakeLists.txt  Kant.h  KantDisplayer.h  KantJson.h  KantType.h  KantXml.h  RequestF.h  RequestF.kant  tup.h
KantFramework/kantcpp/tools/: CMakeLists.txt
KantFramework/kantcpp/tools/kant2cpp/: CMakeLists.txt  kant2cpp.cpp  kant2cpp.h  main.cpp
KantFramework/kantcpp/tools/kantgrammar/: CMakeLists.txt  kant.l  kant.y
KantFramework/kantcpp/tools/kantparse/: CMakeLists.txt  element.cpp  element.h  kant.lex.cpp  kant.tab.cpp  kant.tab.hpp  parse.cpp  parse.h
KantFramework/kantcpp/unit-test/: CMakeLists.txt  main.cpp
KantFramework/kantcpp/unit-test/util/: test_kt_cas.cpp  test_kt_clientsocket.cpp  test_kt_coroutine.cpp  test_kt_encoder.cpp  test_kt_epoller.cpp  test_kt_file.cpp  test_kt_http.cpp  test_kt_logger.cpp  test_kt_network_buffer.cpp  test_kt_port.cpp  test_kt_thread_pool.cpp  test_kt_timer.cpp
KantFramework/kantcpp/util/: CMakeLists.txt
KantFramework/kantcpp/util/include/util/: kt_base64.h  kt_cas_queue.h  kt_clientsocket.h  kt_common.h  kt_config.h  kt_consistent_hash.h  kt_consistent_hash_new.h  kt_coroutine.h  kt_coroutine_queue.h  kt_cron.h  kt_des.h  kt_docker.h  kt_encoder.h  kt_epoll_server.h  kt_epoller.h  kt_ex.h  kt_fcontext.h  kt_file.h  kt_grpc.h  kt_hash_fun.h  kt_hashmap.h  kt_hashmap_compact.h  kt_http.h  kt_http2.h  kt_http_async.h  kt_json.h  kt_lock.h  kt_logger.h  kt_loop_queue.h  kt_md5.h  kt_mem_chunk.h  kt_mem_queue.h  kt_mem_vector.h  kt_mmap.h  kt_monitor.h  kt_mysql.h  kt_network_buffer.h  kt_openssl.h  kt_option.h  kt_parsepara.h  (+25 more)
KantFramework/kantcpp/util/src/: CMakeLists.txt  kt_base64.cpp  kt_clientsocket.cpp  kt_common.cpp  kt_config.cpp  kt_consistent_hash_new.cpp  kt_coroutine.cpp  kt_cron.cpp  kt_des.cpp  kt_docker.cpp  kt_encoder.cpp  kt_epoll_server.cpp  kt_epoller.cpp  kt_ex.cpp  kt_file.cpp  kt_grpc.cpp  kt_http.cpp  kt_http2.cpp  kt_http_async.cpp  kt_json.cpp  kt_logger.cpp  kt_md5.cpp  kt_mysql.cpp  kt_network_buffer.cpp  kt_openssl.cpp  kt_option.cpp  kt_parsepara.cpp  kt_port.cpp  kt_proxy_info.cpp  kt_sha.cpp  kt_shm.cpp  kt_socket.cpp  kt_spin_lock.cpp  kt_strptime.cpp  kt_thread.cpp  kt_thread_cond.cpp  kt_thread_mutex.cpp  kt_thread_pool.cpp  kt_thread_rwlock.cpp  kt_timeprovider.cpp  (+3 more)
KantFramework/vs-project/: README.md  kant-framework.sln
KantFramework/vs-project/AdminRegistryServer/: AdminRegistryServer.vcxproj  AdminRegistryServer.vcxproj.filters
KantFramework/vs-project/kantcpp/: kantcpp.vcxproj  kantcpp.vcxproj.filters
KantFramework/vs-project/kantnode/: kantnode.vcxproj  kantnode.vcxproj.filters
(+10 files in other folders)
